--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,18 +10,20 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: ubuntu-latest
     steps:
-          - task: UseGitVersion@5
-            displayName: GitVersion 
+          - task: gitversion/setup@0
+            displayName: Setup GitVersion
             inputs:
              versionSpec: '5.x'
+          - task: gitversion/execute@0
+            displayName: Execute GitVersion
           - task: Docker@2
-            displayName: Build and Push image
+            displayName: Build and Push an image
             inputs:
               containerRegistry: 'docker-hub'
               repository: 'godeltech/codereview.analyzers.inspectcode'
               command: 'buildAndPush'
-              Dockerfile: '$(Build.SourcesDirectory)/scr/Dockerfile'
-              tags: '$(Build.BuildNumber)'
+              Dockerfile: './src/Dockerfile'
+              tags: |
+                $(Build.BuildNumber)
+                latest
