--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -11,4 +11,4 @@ WORKDIR /tools
 RUN dotnet new tool-manifest
 RUN dotnet tool install JetBrains.ReSharper.GlobalTools
 
-CMD dotnet build $SOLUTION_FILE_PATH && dotnet jb inspectcode $SOLUTION_FILE_PATH -o=/artifacts/result.xml
+CMD dotnet restore $SOLUTION_FILE_PATH && dotnet jb inspectcode $SOLUTION_FILE_PATH -o=/artifacts/result.xml
