--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:3.1
-RUN apt-get update && apt-get install wget && wget https://packages.microsoft.com/config/ubuntu/20.10/packages-microsoft-prod.deb -O packages-microsoft-prod.deb && dpkg -i packages-microsoft-prod.deb && apt-get update && apt-get install -y dotnet-sdk-5.0 && rm packages-microsoft-prod.deb
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine
 
 ENV SOLUTION_FILE_PATH=""
 VOLUME /artifacts
